scroll issue and spacing

--- a/src/components/Section1/Mainlogo/Mainlogo.scss
+++ b/src/components/Section1/Mainlogo/Mainlogo.scss
@@ -7,6 +7,7 @@
 @media (max-width:768px) {
     .container {
         .main-logo {
+            margin-top: 0;
             img {
                 transform: scale(0.6);
                 transform-origin: left;
@@ -15,10 +16,10 @@
     }
 }
 
-@media (max-width:1200px) {
-    .container {
-        .main-logo {
-            margin-bottom: 2em;
-        }
-    }
-}
+// @media (max-width:1200px) {
+//     .container {
+//         .main-logo {
+//             margin-bottom: 2em;
+//         }
+//     }
+// }
